# nam-files

./: .gitignore  Cargo.toml  README.md  armenian_unique-glyphs.nam  build.rs  coptic_unique-glyphs.nam  hebrew_unique-glyphs.nam  kawi_unique-glyphs.nam  malayalam_unique-glyphs.nam  nag-mundari_unique-glyphs.nam  pyproject.toml
scripts/: preprocess_namfile.py  slice_cpdiff.py
src/: lib.rs
subsets-input/: adlam_unique-glyphs.nam  ahom_unique-glyphs.nam  anatolian-hieroglyphs_unique-glyphs.nam  arabic_unique-glyphs.nam  armenian_unique-glyphs.nam  avestan_unique-glyphs.nam  balinese_unique-glyphs.nam  bamum_unique-glyphs.nam  bassa-vah_unique-glyphs.nam  batak_unique-glyphs.nam  bengali_unique-glyphs.nam  beria-erfe_unique-glyphs.nam  bhaiksuki_unique-glyphs.nam  brahmi_unique-glyphs.nam  braille_unique-glyphs.nam  buginese_unique-glyphs.nam  buhid_unique-glyphs.nam  canadian-aboriginal_unique-glyphs.nam  carian_unique-glyphs.nam  caucasian-albanian_unique-glyphs.nam  chakma_unique-glyphs.nam  cham_unique-glyphs.nam  cherokee_unique-glyphs.nam  chinese-hongkong_unique-glyphs.nam  chinese-simplified_unique-glyphs.nam  chinese-traditional_unique-glyphs.nam  chorasmian_unique-glyphs.nam  cjk_punctuation.nam  coptic_unique-glyphs.nam  cuneiform_unique-glyphs.nam  cypriot_unique-glyphs.nam  cypro-minoan_unique-glyphs.nam  cyrillic-ext_unique-glyphs.nam  cyrillic_unique-glyphs.nam  deseret_unique-glyphs.nam  devanagari_unique-glyphs.nam  dives-akuru_unique-glyphs.nam  dogra_unique-glyphs.nam  duployan_unique-glyphs.nam  egyptian-hieroglyphs_unique-glyphs.nam  (+146 more)
(+82 files in other folders)
